@@ -1,3 +1,12 @@
+2012-10-18 Thu  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-files-recursive-lisp): Check FILE before
+	pushing it to list.
+	(epackage-autoload-generate-loaddefs-dir): Add 'nopath case.
+	(epackage-autoload-remove-path-names): New.
+	(epackage-autoload-generate-loaddefs-dir): Use
+	`epackage-autoload-remove-path-names' to remove relative paths.
+
 2012-10-17 Wed  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage-info-mode-tab-command): Add completion
